# talaos-driver-fusioninventory

./: .travis.yml  requirements.txt  setup.cfg  tox.ini
docs/: driver_fusioninventory.ini
talaos_driver_fusioninventory/: communication.py  driver.py  inventory.py
tests/features/: environment.py  import_first_time_computer.feature  import_two_times_computer.feature
tests/features/data/: portdavid.xml
tests/features/steps/: common.py
