[metadata]
name = talaos-driver-fusioninventory
author = Talaos Team
author-email = <to be discussed>
summary = FusionInventory driver for Talaos
description-file = README.md
license = <to be discussed>
classifier =
    Programming Language :: Python :: 3 :: Only
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Environment :: Console
    Framework :: Flask
    Intended Audience :: System Administrators
    Topic :: System :: Systems Administration
keywords =
    inventory
    assets
    management

[files]
packages =
    talaos_driver_fusioninventory
#[entry_points]
#console_scripts =
#    talaos_driver_ = talaos_inventory.main:main

[pbr]
skip_authors = True
skip_changelog = True

[behave]
paths = tests/features

[flake8]
# Ignore the following checks:
# W391: blank line at end of file
ignore=W391
show-source = true
exclude = .venv,.tox,dist,doc,*.egg,build
